--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <title>Dominik Łysak | Software Tester</title>
     <link rel="icon" href="fav.png">
-    <script defer src="main.e7c7970a12833611eb02.js"></script>
-    <link href="main.40f27e161ba829c32fbb.css" rel="stylesheet">
+    <script defer src="main.js"></script>
+    <link href="main.css" rel="stylesheet">
 </head>
 
 <body>
