favicons with gradient for both sites

--- a/pdfviewerfortest/index.html
+++ b/pdfviewerfortest/index.html
@@ -5,6 +5,23 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="api-base" content="http://localhost:5000">
   <title>PDF Viewer</title>
+  <link rel="icon" href='data:image/svg+xml;utf8,
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
+  <defs>
+    <linearGradient id="gradCape1" x1="0%" y1="0%" x2="80%" y2="80%">
+      <stop offset="0%" stop-color="%2351A2E9"/>
+      <stop offset="50%" stop-color="%23A878A2"/>
+      <stop offset="100%" stop-color="%23FF4D5A"/>
+    </linearGradient>
+  </defs>
+  <!-- Maksymalnie duża lupa -->
+  <circle cx="28" cy="28" r="18" stroke="url(%23gradCape1)" stroke-width="6" fill="none"/>
+  <line x1="38" y1="38" x2="52" y2="52" stroke="url(%23gradCape1)" stroke-width="6" stroke-linecap="round"/>
+</svg>'
+  >
+
+
+
   <script src="https://cdn.tailwindcss.com"></script>
   <script>tailwind.config = { darkMode: 'class' };</script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
