--- a/pdfviewerfortest/index.html
+++ b/pdfviewerfortest/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="api-base" content="http://localhost:5000">
+  <meta name="api-base" content="https://dominik-lysak.ddns.net">
   <title>PDF Viewer</title>
   <link rel="icon" href='data:image/svg+xml;utf8,
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
