--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@
         <div class="project__info">
             <h3 class="project__title">PDF Viewer with three types of tests</h3>
             <p class="project__description">
-                Web application that will allow control over the software testing process. The system has elements responsible for managing users, organizing tasks and assigning them with opportunity of monitoring progress and results
+                This project demonstrates a variety of software testing approaches, including API tests written in Java, UI tests using Selenium in Python, and end-to-end tests implemented with Cypress in TypeScript.
             </p>
 
-            <a href="https://github.com/DLysa" target="_blank"><div class="project__live-2">View on GitHub</div></a>
+            <a href="https://github.com/DLysa/Porfolio-site-with-tests" target="_blank"><div class="project__live-2">View on GitHub</div></a>
             <a href="/pdfviewerfortest/" target="_blank"><div class="project__live-2">View DEMO</div></a>
         </div>
         <div class="project__image-container retro">
