CV update, tests under work, desc update, project order upgrade

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="canvas"><canvas class="connecting-dots"></canvas></div>
     <div class="heading">
         <div class="heading__line-1">Hello, I'm <span>Dominik</span>.</div>
-        <div class="heading__line-2">I'm a Software Tester.</div>
+        <div class="heading__line-2">I'm a Software Quality Engineer.</div>
         <a href="#about" class="heading__link">
             <div class="heading-cta">
                 View my work
@@ -96,10 +96,11 @@
                 </svg>
             </div>
             <p class="profile__blurb">
-                I am a passionate software tester with over two years of experience in manual testing,
-                currently pursuing a Master's degree in Computer Science. I’ve worked on projects from
-                start to finish, collaborating closely with developers and analysts to ensure the highest
-                software quality.
+                I am currently working towards a Master’s degree in Computer Science and
+                have two years of experience in manual testing. I’m seeking opportunities to apply my problem-solving
+                mindset to developing data-driven solutions while expanding my skills in
+                programming, data analysis, and automation — using analytical thinking and
+                technical precision to improve processes and support decision-making.
             </p>
         </div>
         <!-- SKILLS -->
@@ -173,23 +174,7 @@
     <h2 class="projects__heading section-heading">Projects</h2>
 
     <div class="project project-left">
-        <div class="project__info">
-            <h3 class="project__title"> Management App</h3>
-            <p class="project__description">
-                Web application that will allow control over the software testing process.
-                The system has elements responsible for managing users, organizing tasks
-                and assigning them with opportunity of monitoring progress and results
-            </p>
-            <a href="https://github.com/DLysa/Management-app" target="_blank"><div class="project__live-2">View on GitHub</div></a>
-        </div>
-        <div class="project__image-container weather">
-            <div class="project__image-image">
-                <img src="imgs/inz.png" alt="Automation Project Preview">
-            </div>
-        </div>
-    </div>
 
-    <div class="project project-right">
         <div class="project__info">
             <h3 class="project__title">PDF Viewer with three types of tests</h3>
             <p class="project__description">
@@ -204,6 +189,25 @@
                 <img src="imgs/pdfviewer.png" alt="PDF Viewer with 3 types of tests">
             </div>
         </div>
+
+    </div>
+
+    <div class="project project-right">
+        <div class="project__info">
+            <h3 class="project__title"> Management App</h3>
+            <p class="project__description">
+                Web application that will allow control over the software testing process.
+                The system has elements responsible for managing users, organizing tasks
+                and assigning them with opportunity of monitoring progress and results
+            </p>
+            <a href="https://github.com/DLysa/Management-app" target="_blank"><div class="project__live-2">View on GitHub</div></a>
+        </div>
+        <div class="project__image-container weather">
+            <div class="project__image-image">
+                <img src="imgs/inz.png" alt="Automation Project Preview">
+            </div>
+        </div>
+
     </div>
 
     <div class="project project-left">
